--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "Basic discord bot using discord.js with typescript",
   "main": "dist/index.js",
+  "types": "environment.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:prod": "node dist/index.js",
     "clean": "rimraf -r dist",
     "prebuild": "npm run clean",
     "build": "tsc",
+    "watch": "tsc -w",
     "start": "npm run build && npm run start:prod",
     "deploy": "npm run build && node dist/deploy-commands.js"
   },
