--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "rimraf": "^4.1.2",
     "typescript": "^4.9.5"
   },
+  "overrides": {
+    "discord-api-types": "0.37.20"
+  },
   "engines": {
     "node": ">=16.9.0"
   }
