--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:prod": "node dist/index.js",
-    "clean": "rimraf -r dist",
+    "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "tsc",
     "watch": "tsc -w",
