--- a/.github/ISSUE_TEMPLATE/01-feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/01-feature_request.yml
@@ -1,6 +1,6 @@
 name: Feature Request
 description: Request a new feature for the sample handler.
-labels: [feature request]
+labels: ["enhancement", "question"]
 body:
   - type: markdown
     attributes:
