--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-TOKEN= # Your bot token
+TOKEN= 
+# Your bot token
 
-GUILD_ID= # Replace with your guild ID
-# <- add infront of GUILD_ID if you want to register commands globally
+GUILD_ID=
+# Only put an ID here if you want commands to be registered in one server.
 
-CLIENT_ID= # Replace with your client id
+CLIENT_ID=
+# Your bot's application ID (can be found on Discord or on the Discord Developer Portal)
