--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:prod": "node dist/index.js",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "build": "tsc",
+    "build": "tsc --pretty",
     "watch": "tsc -w",
     "start": "npm run build && npm run start:prod",
     "deploy": "npm run build && node dist/deploy-commands.js"
@@ -33,8 +33,9 @@
   },
   "type": "module",
   "author": "",
-  "license": "ISC",
+  "license": "GNU GENERAL PUBLIC LICENSE V3",
   "dependencies": {
+    "chalk": "^5.3.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1"
   },
