chore: require dotenv in script execution

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "types": "environment.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:prod": "node dist/index.js",
+    "start:prod": "node --require dotenv/config dist/index.js",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "tsc --pretty",
     "watch": "tsc -w",
     "start": "npm run build && npm run start:prod",
-    "deploy": "npm run build && node dist/deploy-commands.js"
+    "deploy": "npm run build && node --require dotenv/config dist/deploy-commands.js"
   },
   "repository": {
     "type": "git",
