--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "tsc --pretty",
     "watch": "tsc -w",
     "start": "npm run build && npm run start:prod",
-    "deploy": "npm run build && node --require dotenv/config dist/deploy-commands.js"
+    "deploy": "npm run build && node --require dotenv/config dist/deploy-commands.js",
+    "format": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -40,6 +41,7 @@
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
+    "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.6"
   },
