--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
 		"target": "ESNext",
 		"moduleDetection": "auto",
 		"resolveJsonModule": true,
-		
+
 		// Emit
+		"rootDir": "./src",
 		"outDir": "dist",
 		"alwaysStrict": false,
 		"sourceMap": false,
@@ -30,6 +31,11 @@
 		"skipDefaultLibCheck": true,
 		"importHelpers": true
 	},
-	"include": ["src/**/*", "environment.d.ts"],
-	"exclude": ["node_modules"]
+	"include": [
+		"src/**/*",
+		"environment.d.ts"
+	],
+	"exclude": [
+		"node_modules"
+	]
 }
