--- a/package.json
+++ b/package.json
@@ -9,27 +9,25 @@
     "build": "tsc --pretty",
     "clean": "rimraf dist",
     "dev": "pnpm build && pnpm start",
-    "deploy": "pnpm build && node --require dotenv/config dist/deploy-commands.js",
+    "deploy": "pnpm build && node --env-file=.env dist/deploy-commands.js",
     "prebuild": "pnpm run clean",
-    "start": "pnpm run build && node --require dotenv/config dist/index.js",
+    "start": "pnpm run build && node --env-file=.env dist/index.js",
     "watch": "tsc -w"
   },
   "dependencies": {
-    "chalk": "^5.3.0",
-    "discord.js": "^14.16.2",
-    "dotenv": "^16.4.5"
+    "discord.js": "^14.16.2"
   },
   "devDependencies": {
     "rimraf": "^6.0.1",
     "typescript": "^5.6.2"
   },
   "engines": {
-    "node": ">=18",
+    "node": ">=20",
     "pnpm": "9.10.0"
   },
   "packageManager": "pnpm@9.10.0",
   "volta": {
-    "node": "18.17.0",
+    "node": "20.17.0",
     "pnpm": "9.10.0"
   }
 }
