--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   "scripts": {
     "build": "tsc --pretty",
     "clean": "rimraf dist",
-    "dev": "pnpm build && pnpm start",
     "deploy": "pnpm build && node --env-file=.env dist/deploy-commands.js",
+    "dev": "pnpm build && pnpm start",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint": "eslint --fix src",
+    "lint:check": "eslint src",
     "prebuild": "pnpm run clean",
     "start": "pnpm run build && node --env-file=.env dist/index.js",
     "watch": "tsc -w"
@@ -18,6 +22,10 @@
     "discord.js": "^14.16.2"
   },
   "devDependencies": {
+    "@types/node": "^22.5.5",
+    "eslint": "^8.57.0",
+    "eslint-config-neon": "^0.1.62",
+    "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "typescript": "^5.6.2"
   },
