--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5"
   },
