--- a/package.json
+++ b/package.json
@@ -6,31 +6,33 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc --pretty",
+    "build": "tsc",
     "clean": "rimraf dist",
-    "deploy": "pnpm build && node --require dotenv/config dist/deploy-commands.js",
-    "prereq": "pnpm build && node --require dotenv/config dist/misc/prerequisitesCheck.js",
-    "dev": "pnpm build && pnpm start",
+    "deploy": "npm run build && node --env-file=.env dist/deploy-commands.js",
+    "remove": "npm run build && node --env-file=.env dist/remove-commands.js",
+    "prereq": "npm run build && node --env-file=.env dist/misc/prerequisitesCheck.js",
+    "dev": "npm run build && npm start",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint --fix src",
     "lint:check": "eslint src",
-    "prebuild": "pnpm clean",
-    "start": "pnpm prereq && node --require dotenv/config dist/index.js",
+    "prebuild": "npm run clean",
+    "start": "npm run prereq && node --env-file=.env dist/index.js",
     "watch": "tsc -w"
   },
   "dependencies": {
     "chalk": "^5.4.1",
-    "discord.js": "^14.20.0",
-    "dotenv": "^16.5.0"
+    "discord.js": "^14.21.0"
   },
   "devDependencies": {
-    "@types/node": "^24.0.3",
-    "eslint": "^8.57.1",
-    "eslint-config-neon": "^0.2.7",
-    "prettier": "^3.5.3",
+    "@eslint/js": "^9.30.0",
+    "@types/node": "^24.0.8",
+    "eslint": "^9.30.0",
+    "globals": "^16.2.0",
+    "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.1"
   },
   "engines": {
     "node": ">=20",
